# plate

./: README.md  plate.cabal  shell.nix  stack.yaml
docs/: priorities.md  specification.md
src/: Plate.hs  PlateExamples.hs
src/Plate/: Prelude.hs  Schema.hs  Validation.hs  Value.hs
test/: Test.hs
test/Test/: Prelude.hs  ReadmeExamples.hs  SimplePlate.hs  Validation.hs
